force-app/main/default/objects/Reva_Guest_House_Booking__c/Reva_Guest_House_Booking__c.object-meta.xml
<CustomObject>
    <label>REVA Guest House Booking</label>
    <nameField>
        <displayFormat>RGH-{0000000}</displayFormat>
        <label>REVA Guest House Booking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reva Guest House Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>