force-app/main/default/objects/Reva_Guest_House_Booking__c/fields/Approved_by_Department_Head__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_Department_Head__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved by Department Head</label>
    <type>Checkbox</type>
</CustomField>