force-app/main/default/objects/Reva_Guest_House_Booking__c/fields/Approved_By_General_Admin__c.field-meta.xml
<CustomField>
    <fullName>Approved_By_General_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved By General Admin</label>
    <type>Checkbox</type>
</CustomField>