force-app/main/default/objects/Reva_Guest_House_Booking__c/fields/Check_Out__c.field-meta.xml
<CustomField>
    <fullName>Check_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Out</label>
    <type>Checkbox</type>
</CustomField>