force-app/main/default/objects/Reva_Guest_House_Booking__c/fields/Co_Ordinator_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Co_Ordinator_Mobile_Number__c</fullName>
    <label>Co Ordinator Mobile Number</label>
    <type>Phone</type>
</CustomField>