force-app/main/default/objects/Reva_Guest_House_Booking__c/fields/Co_Ordinator_Name__c.field-meta.xml
<CustomField>
    <fullName>Co_Ordinator_Name__c</fullName>
    <inlineHelpText>Manual Entry</inlineHelpText>
    <label>Co Ordinator Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>