force-app/main/default/objects/Reva_Guest_House_Booking__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co Ordinator Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Reva Guest House Bookings (Co Ordinator Name)</relationshipLabel>
    <relationshipName>Reva_Guest_House_Bookings1</relationshipName>
    <type>Lookup</type>
</CustomField>