force-app/main/default/objects/Reva_Guest_House_Booking__c/fields/ContactLookUp__c.field-meta.xml
<CustomField>
    <fullName>ContactLookUp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name of the Applicant - Student / Staff</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Reva Guest House Bookings</relationshipLabel>
    <relationshipName>Reva_Guest_House_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>