force-app/main/default/objects/Reva_Guest_House_Booking__c/fields/Department_Head__c.field-meta.xml
<CustomField>
    <fullName>Department_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reva_Guest_House_Bookings2</relationshipName>
    <type>Lookup</type>
</CustomField>