force-app/main/default/objects/Reva_Guest_House_Booking__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <label>End Date Time</label>
    <type>DateTime</type>
</CustomField>