force-app/main/default/objects/Reva_Guest_House_Booking__c/fields/Fee_Paid_Paid_Guest__c.field-meta.xml
<CustomField>
    <fullName>Fee_Paid_Paid_Guest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fee Paid(Paid Guest)</label>
    <type>Checkbox</type>
</CustomField>