force-app/main/default/objects/Reva_Guest_House_Booking__c/fields/General_Admin__c.field-meta.xml
<CustomField>
    <fullName>General_Admin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>General Admin</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reva_Guest_House_Bookings1</relationshipName>
    <type>Lookup</type>
</CustomField>