force-app/main/default/objects/Reva_Guest_House_Booking__c/fields/Guest_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Guest_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Guest Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reva_Guest_House_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>