force-app/main/default/objects/Reva_Guest_House_Booking__c/fields/Guest_Description__c.field-meta.xml
<CustomField>
    <fullName>Guest_Description__c</fullName>
    <label>Guest Description</label>
    <length>150</length>
    <type>Text</type>
</CustomField>