force-app/main/default/objects/Reva_Guest_House_Booking__c/fields/Guest_House_Room__c.field-meta.xml
<CustomField>
    <fullName>Guest_House_Room__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Guest House Room</label>
    <referenceTo>REVA_Guest_House_Room__c</referenceTo>
    <relationshipLabel>Reva Guest House Bookings</relationshipLabel>
    <relationshipName>Reva_Guest_House_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>