force-app/main/default/objects/Reva_Guest_House_Booking__c/fields/Id_Proof__c.field-meta.xml
<CustomField>
    <fullName>Id_Proof__c</fullName>
    <label>Id Proof</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>