force-app/main/default/objects/Reva_Guest_House_Booking__c/fields/Name_of_Dept_School__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Dept_School__c</fullName>
    <label>Name of Dept/School</label>
    <length>50</length>
    <type>Text</type>
</CustomField>