force-app/main/default/objects/Reva_Guest_House_Booking__c/fields/No_of_Days__c.field-meta.xml
<CustomField>
    <fullName>No_of_Days__c</fullName>
    <formula>IF(
    Duration__c &lt;= 24, 
    1, 
    IF(
        Duration__c &gt; 24 &amp;&amp; Duration__c &lt; 48, 
        2, 
        CEILING(Duration__c / 24)
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>