force-app/main/default/objects/Reva_Guest_House_Booking__c/fields/No_of_Guest__c.field-meta.xml
<CustomField>
    <fullName>No_of_Guest__c</fullName>
    <label>No of Guest</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>