force-app/main/default/objects/Reva_Guest_House_Booking__c/fields/Official__c.field-meta.xml
<CustomField>
    <fullName>Official__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Official</label>
    <type>Checkbox</type>
</CustomField>