force-app/main/default/objects/Reva_Guest_House_Booking__c/fields/Purpose_of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Visit__c</fullName>
    <label>Purpose of Visit</label>
    <length>250</length>
    <type>Text</type>
</CustomField>