force-app/main/default/objects/Reva_Guest_House_Booking__c/fields/Room_Details__c.field-meta.xml
<CustomField>
    <fullName>Room_Details__c</fullName>
    <label>Room Details</label>
    <length>100</length>
    <type>Text</type>
</CustomField>