force-app/main/default/objects/Reva_Guest_House_Booking__c/fields/Sharing_Type__c.field-meta.xml
<CustomField>
    <fullName>Sharing_Type__c</fullName>
    <label>Sharing Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Room_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Two Sharing</fullName>
            </value>
            <value>
                <fullName>Three Sharing</fullName>
            </value>
            <value>
                <fullName>Four Sharing</fullName>
            </value>
            <value>
                <fullName>King Bed</fullName>
            </value>
            <value>
                <fullName>Queen Bed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>