force-app/main/default/objects/Reva_Guest_House_Booking__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <label>Start Date Time</label>
    <type>DateTime</type>
</CustomField>