force-app/main/default/objects/Reva_Guest_House_Booking__c/fields/Type_of_Guest__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Guest__c</fullName>
    <label>Guest Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>University Guest</fullName>
            </value>
            <value>
                <fullName>Department Guest</fullName>
            </value>
            <value>
                <fullName>Parents</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Alumini</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>