force-app/main/default/objects/Reva_Guest_House_Booking__c/fields/Verified__c.field-meta.xml
<CustomField>
    <fullName>Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please ensure that everything in the guest room is checked and verified before vacating.</inlineHelpText>
    <label>Verified</label>
    <type>Checkbox</type>
</CustomField>