force-app/main/default/objects/Reva_Guest_House_Booking__c/fields/Visa_Expired__c.field-meta.xml
<CustomField>
    <fullName>Visa_Expired__c</fullName>
    <label>Visa Expired</label>
    <type>Date</type>
</CustomField>