force-app/main/default/objects/Reva_Guest_House_Booking__c/validationRules/Check_in_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_in_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(Room_Details__c)</errorConditionFormula>
    <errorDisplayField>Check_In__c</errorDisplayField>
    <errorMessage>Check In should be After Room Allotment</errorMessage>
</ValidationRule>