force-app/main/default/objects/Reva_Guest_House_Booking__c/validationRules/Check_Out.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Out</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    Check_Out__c = TRUE,
    Check_In__c = FALSE
)</errorConditionFormula>
    <errorDisplayField>Check_Out__c</errorDisplayField>
    <errorMessage>You have not Check In</errorMessage>
</ValidationRule>