force-app/main/default/objects/Reva_Guest_House_Booking__c/validationRules/Check_Out_After_remarks.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Out_After_remarks</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(Remarks__c)</errorConditionFormula>
    <errorDisplayField>Remarks__c</errorDisplayField>
    <errorMessage>Please do verify and enter the remarks first and then do check out</errorMessage>
</ValidationRule>